// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose template page renders error component 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-error-summary"
  >
    <h2
      class="nhsuk-error-summary__title"
      data-testid="error-summary"
    >
      There is a problem
    </h2>
    <ul
      class="nhsuk-list nhsuk-error-summary__list"
    >
      <li>
        <a
          href="#page"
        >
          Component error message
        </a>
      </li>
    </ul>
  </div>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="choose-template"
    />
    <div
      class="nhsuk-form-group nhsuk-form-group--error"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="page-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Choose a template type to create
          </h1>
        </legend>
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <div
            class="nhsuk-hint"
            id="page--hint"
          >
            Select one option
          </div>
          <span
            class="nhsuk-error-message"
            id="page-error-message"
          >
            <span
              class="nhsuk-u-visually-hidden"
            >
              Error: 
            </span>
            Component error message
          </span>
          <div
            aria-describedby="page--hint"
            class="nhsuk-radios"
            id="page"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-nhs-app-template--label"
                class="nhsuk-radios__input"
                data-testid="create-nhs-app-template-radio"
                id="page-create-nhs-app-template"
                name="page"
                type="radio"
                value="create-nhs-app-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-nhs-app-template"
                id="page-create-nhs-app-template--label"
              >
                NHS App message
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-email-template--label"
                class="nhsuk-radios__input"
                data-testid="create-email-template-radio"
                id="page-create-email-template"
                name="page"
                type="radio"
                value="create-email-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-email-template"
                id="page-create-email-template--label"
              >
                Email
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-sms-template--label"
                class="nhsuk-radios__input"
                data-testid="create-sms-template-radio"
                id="page-create-sms-template"
                name="page"
                type="radio"
                value="create-sms-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-sms-template"
                id="page-create-sms-template--label"
              >
                Text message (SMS)
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-letter-template--label"
                class="nhsuk-radios__input"
                data-testid="create-letter-template-radio"
                id="page-create-letter-template"
                name="page"
                type="radio"
                value="create-letter-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-letter-template"
                id="page-create-letter-template--label"
              >
                Letter
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="choose-template-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Choose template page selects one radio button at a time 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="choose-template"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="page-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Choose a template type to create
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-hint"
            id="page--hint"
          >
            Select one option
          </div>
          <div
            aria-describedby="page--hint"
            class="nhsuk-radios"
            id="page"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-nhs-app-template--label"
                class="nhsuk-radios__input"
                data-testid="create-nhs-app-template-radio"
                id="page-create-nhs-app-template"
                name="page"
                type="radio"
                value="create-nhs-app-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-nhs-app-template"
                id="page-create-nhs-app-template--label"
              >
                NHS App message
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-email-template--label"
                class="nhsuk-radios__input"
                data-testid="create-email-template-radio"
                id="page-create-email-template"
                name="page"
                type="radio"
                value="create-email-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-email-template"
                id="page-create-email-template--label"
              >
                Email
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-sms-template--label"
                class="nhsuk-radios__input"
                data-testid="create-sms-template-radio"
                id="page-create-sms-template"
                name="page"
                type="radio"
                value="create-sms-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-sms-template"
                id="page-create-sms-template--label"
              >
                Text message (SMS)
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="page-create-letter-template--label"
                class="nhsuk-radios__input"
                data-testid="create-letter-template-radio"
                id="page-create-letter-template"
                name="page"
                type="radio"
                value="create-letter-template"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="page-create-letter-template"
                id="page-create-letter-template--label"
              >
                Letter
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="choose-template-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;
